scss/main.css
/*For now, this will just be a regular css-file.*/


/*CSS custom properties(variables). Source claims non-compatibility with IE and some other browsers.*/
body {
  /*Thematic colors*/

  /*For banner, buttons and some borders. Alt. 09F, 06F*/
  --theme-color: #09F;
  /*Contrast to theme color. For button background and some textboxes. Alt FF9,FC6,CC6*/
  --contrast-color: #FC6;
  --link-color: #FFF; /*Default color of links/button text and their borders*/
  --select-color: #009; /*Default button color when hovering. Alt 009, 00F*/
  --bgcolor: #999; /*Default background color. Alt. 999, CC9*/
  --sub-bgcolor: #CCC; /*Background color for subsections*/

  /*Margins, borders, paddings*/
  --pads: 4px;
  --big-pads: 8px;

  /*Dimensional vars*/
  --logo-width: 160px;
  --imgtxt-offset: 200px; /*Since the height of the banner depends on the width of the logo, this needs to change if the logo size changes*/
}


/*General html objects*/
* {
  margin: 0px;
  padding: 0px;
}

body {
  margin: var(--pads);
  margin-top: 120px;    /*Make room for wrapper*/
  overflow-x: hidden;     /*Prevent scroll-bar and remove the overflowing content. Possible issue at small screen widths.*/
  background-color: var(--bgcolor); /*Alt. 999,CC9*/
}

h2 {
  margin: var(--big-pads);
}

h4 {
  margin-top: var(--pads);
  margin-bottom: var(--big-pads);
  text-align: center;
  font-size: 18px;
  color: #666;
}

p, li {
  margin: var(--big-pads);
}

/*Styling links as buttons. Might want to adopt a more modern implementation later.*/
a {
  padding: var(--big-pads);
  border: 2px solid transparent;
  border-radius: var(--big-pads);
  color: var(--link-color);
  background-color: var(--theme-color);
  text-decoration: none;
}

a:hover {
  border-color: #000;
  background-color: var(--select-color);
}

ul {
  list-style-position: inside;
}

hr {
  border: 1px solid var(--theme-color);
}


/*General styles (used for different kinds of things)*/

/*Provides box styling for information/descriptions/histories and similar.*/
.storybox {
  border: 2px solid var(--theme-color);
  background-color: var(--contrast-color);
}

/*Used above or below other content to change its position*/
p.usynlig {
  visibility: hidden;
}

/*General signature*/
p.sign {
  text-align: right;
  font-style: italic;
}


/*home page styling/*

/*banner/*
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
/*Will need to retest if the navbar (or other content) is altered.*/
/*Might want to look into bootstrap for easier customization*/

#banner-wrapper {
  border: var(--pads) solid var(--bgcolor);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;   /*Make sure that the banner covers other content.*/
  background-color: var(--theme-color);
  /*opacity: 0.95;*/
}

#banner {
  display: flex;
  align-items: flex-end;
}

#banner a {
  padding: 0;
  border: 0;
}

#banner img {
  margin: var(--pads);    /*As a margin between img and the next element*/
  width: var(--logo-width);
  display: flex;          /*Prevents extra bottom-padding for image link*/
}

/*navbar is part of the banner*/
#navbar {
  margin-left: auto;
  margin-right: var(--pads);
  display: flex;
}

#navbar a {
  padding: var(--pads);
  margin-bottom: var(--pads);
  margin-left: 1px;
  border-radius: 0;
  text-decoration: underline;
  font-size: 18px;
  background-color: var(--contrast-color);
  color: var(--theme-color);
}

#navbar a:hover {
  border-color: transparent;
  color: var(--select-color);
}

/*illustrasjon*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
/*Will need to retest if the image (or other content) is altered.*/

.illustrasjon {
  display: flex;
  align-items: center;
}

.illustrasjon img {
  width: 100%;    /*Attempted to do this with block display, but that doesn't work on replaced elements (images).*/
  min-height: 160px;  /*To align content if the image doesn't load correctly*/
  background-color: var(--theme-color);
}

/*Text/button to be written on top of image*/
.ill-text {
  position: absolute;
  width: 100%;    /*Not automatic when pos is absolute*/
  right: 0px;   /*Prevents the element from flowing outside the body margins.*/
  text-align: center;
  color: var(--link-color); /*Change to some other var or value if necessary*/
}

.ill-text a {
  margin-top: 16px;
  border-color: var(--contrast-color);
  color: var(--contrast-color);
  display: inline-block;
  font-size: 20px;
  background-color: transparent;
}

.ill-text a:hover {
  background-color: var(--select-color);
  border-color: #000;
}

/*info*/
/*221117: Works well with sizes (450, 1360) and probably somewhat smaller ones as well.*/
.info {
  text-align: center;
}

/*options (button row)*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
#options {
  padding: var(--big-pads);
  display: flex;
  justify-content: space-around;
  background-color: var(--sub-bgcolor);
}

#options a {
  padding: 30px;
  border-radius: 20px;
  font-size: 40px;
}

/*Stories from users*/
/*221117: Tested and seems ok at browser widths (600, 1360) in Chrome.*/
/*For smaller widths, should try to make it single-columned.*/
#stories {
  display: grid;
  grid-template: 1fr 1fr / 1fr 1fr;
  grid-gap: 10px;
}

p.story {   /*Using this generally with some potential modification might be done later*/
  margin: var(--big-pads);
  height: 96px;
  overflow: hidden;
  text-align: center;
  font-size: 20px;
}

#stories .storylink {
  margin-left: var(--pads);
  height: 44px;
  width: 160px;
  bottom: 10px;
  position: relative;
  float: left;
}

#stories .storylink a {
  padding: 5px 5px 5px 45px;
  position: absolute;
  font-size: 18px;
  line-height: 30px;
  color: var(--contrast-color);
}

#stories .arrow {
  margin-left: var(--pads);
  position: absolute;
  top: 6px; /*To align the arrow inside a link button*/
  width: 32px;
  height: 32px;
  background-color: var(--contrast-color);  /*Actual color of arrow*/
  clip-path: polygon(0% 75%, 0% 25%, 50% 25%, 50% 0%, 100% 50%, 50% 100%, 50% 75%);
  z-index: 10;
}

/*footer*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
.footer {
  margin-top: 20px;
  border-top: 2px solid var(--theme-color);
  overflow: hidden;
  background-color: var(--sub-bgcolor);
}

.footer p {
  text-align: center;
  clear: right;   /*Had to use this to force it below the facebook link*/
}

.footer .tlf {
  font-weight: bold;
}

.footer a.logo-link {
  padding: 0;
  border-radius: 0;
  margin: var(--pads);
  float: right;
}

.footer .logo-link img{
  margin: 2px;
  width: 32px;
  height: 32px;
  display: flex;
}


/*Common sub-page styles*/

/*Styling link to home page*/
.home {
  margin: 20px 0px;
  text-align: center;
}

/*Styling user pages*/

/*User feedback initially should also have a storybox class*/
.user {
  margin-left: 20%;
  margin-right: 20%;
  padding: var(--big-pads);
}

.user img{
  width: 100%;
}


/*Dreis styles*/

/*services styling*/
#services {
  margin: 5px;
  display: grid;
  grid-template: calc(var(--logo-width) + 4px) / calc(var(--logo-width) + 4px) 1fr;
  grid-gap: 10px;
}

.infocell {   /*Not using id to prevent overriding the debug class*/
  display: flex;
  align-items: center;
}

#services .infotext {
  padding: 0px var(--big-pads);
  width: 100%;
  height: calc(var(--logo-width) - 32px);
  overflow-y: auto;
}

#services img {
  width: var(--logo-width);
  height: var(--logo-width);
  display: flex;
}

#services p {
  font-size: 16px;
}


/*Classes that need to override other classes*/

/*To optionally remove debugging content from the document flow*/
.debug {
  display: none;
}

